# PhotoNext_Configurator

./: CMakeLists.txt  README.md
include/: smartscanconfig.h
src/: smartscanconfig.c
